[project]
name = "comfyui-view-recommendations"
description = "Load model generation data from civitai"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-view-recommendations"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-view-recommendations"
Icon = ""
